# issue-shaper-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
examples/: output.json  output.md  raw_bug.txt
src/issue_shaper_ai/: __init__.py  __main__.py
tests/: test_cli.py
