[project]
name = "issue-shaper-ai"
version = "0.1.0"
description = "Turn rough bug reports and logs into structured GitHub issues."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Issue Shaper AI contributors" }]
keywords = ["ai", "github-issues", "bug-report", "triage", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/niuxinhuai/issue-shaper-ai"
Repository = "https://github.com/niuxinhuai/issue-shaper-ai"
Issues = "https://github.com/niuxinhuai/issue-shaper-ai/issues"

[project.scripts]
issue-shaper-ai = "issue_shaper_ai.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
